Live Data/mdapipkg/unpackaged/objects/ContactEntitlement__c.object
<CustomObject>
    <fields>
        <fullName>ContactAccount__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactID18__c</fullName>
        <formula>CASESAFEID(  Contact__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ContactEntitlements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deleted Flag</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EntitlementC__c</fullName>
        <label>Entitlement</label>
        <referenceTo>Entitlement__c</referenceTo>
        <relationshipName>ContactEntitlements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HowToQs__c</fullName>
        <formula>EntitlementC__r.EntitledHowToQuestions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>How To Qs</label>
        <type>Text</type>
    </fields>
    <label>Contact Entitlement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>